--- a/Google Trends/main.ipynb
+++ b/Google Trends/main.ipynb
@@ -81,51 +81,203 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Challenge**: <br>\n",
-    "\n",
-    "<ul>\n",
-    "<li>What are the shapes of the dataframes? </li>\n",
-    "<li>How many rows and columns? </li>\n",
-    "<li>What are the column names? </li>\n",
-    "<li>Complete the f-string to show the largest/smallest number in the search data column</li> \n",
-    "<li>Try the <code>.describe()</code> function to see some useful descriptive statistics</li>\n",
-    "<li>What is the periodicity of the time series data (daily, weekly, monthly)? </li>\n",
-    "<li>What does a value of 100 in the Google Trend search popularity actually mean?</li>\n",
-    "</ul>\n"
+    "**Shape of DataFrames**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(124, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tesla.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(73, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_search.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(181, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unemployment.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(73, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_search.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TSLA_WEB_SEARCH</th>\n",
+       "      <th>TSLA_USD_CLOSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>124.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8.725806</td>\n",
+       "      <td>50.962145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.870332</td>\n",
+       "      <td>65.908389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.896000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>7.352500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>44.653000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>58.991999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>498.320007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       TSLA_WEB_SEARCH  TSLA_USD_CLOSE\n",
+       "count       124.000000      124.000000\n",
+       "mean          8.725806       50.962145\n",
+       "std           5.870332       65.908389\n",
+       "min           2.000000        3.896000\n",
+       "25%           3.750000        7.352500\n",
+       "50%           8.000000       44.653000\n",
+       "75%          12.000000       58.991999\n",
+       "max          31.000000      498.320007"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tesla.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Largest value for Tesla in Web Search: \n",
-      "Smallest value for Tesla in Web Search: \n"
+      "Largest value for Tesla in Web Search: 31\n",
+      "Smallest value for Tesla in Web Search: 2 \n"
      ]
     }
    ],
    "source": [
-    "print(f\"Largest value for Tesla in Web Search: \")\n",
-    "print(f\"Smallest value for Tesla in Web Search: \")"
+    "print(f\"Largest value for Tesla in Web Search: {df_tesla['TSLA_WEB_SEARCH'].max()}\")\n",
+    "print(f\"Smallest value for Tesla in Web Search: {df_tesla['TSLA_WEB_SEARCH'].min()} \")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -136,26 +288,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>UE_BENEFITS_WEB_SEARCH</th>\n",
+       "      <th>UNRATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004-01</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004-02</td>\n",
+       "      <td>33</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004-03</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-04</td>\n",
+       "      <td>29</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-05</td>\n",
+       "      <td>23</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     MONTH  UE_BENEFITS_WEB_SEARCH  UNRATE\n",
+       "0  2004-01                      34     5.7\n",
+       "1  2004-02                      33     5.6\n",
+       "2  2004-03                      25     5.8\n",
+       "3  2004-04                      29     5.6\n",
+       "4  2004-05                      23     5.6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unemployment.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Largest value for \"Unemployemnt Benefits\" in Web Search: \n"
+      "Largest value for \"Unemployemnt Benefits\"  in Web Search: 100\n"
      ]
     }
    ],
    "source": [
-    "print('Largest value for \"Unemployemnt Benefits\" ' f\"in Web Search: \")"
+    "print(\n",
+    "    'Largest value for \"Unemployemnt Benefits\"  '\n",
+    "    f\"in Web Search: {df_unemployment['UE_BENEFITS_WEB_SEARCH'].max()}\"\n",
+    ")"
    ]
   },
   {
@@ -167,33 +399,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>BTC_NEWS_SEARCH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-09</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-10</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-11</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     MONTH  BTC_NEWS_SEARCH\n",
+       "0  2014-09                5\n",
+       "1  2014-10                4\n",
+       "2  2014-11                4\n",
+       "3  2014-12                4\n",
+       "4  2015-01                5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_search.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>CLOSE</th>\n",
+       "      <th>VOLUME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-09-17</td>\n",
+       "      <td>457.334015</td>\n",
+       "      <td>21056800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-09-18</td>\n",
+       "      <td>424.440002</td>\n",
+       "      <td>34483200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-09-19</td>\n",
+       "      <td>394.795990</td>\n",
+       "      <td>37919700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-09-20</td>\n",
+       "      <td>408.903992</td>\n",
+       "      <td>36863600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-09-21</td>\n",
+       "      <td>398.821014</td>\n",
+       "      <td>26580100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE       CLOSE      VOLUME\n",
+       "0  2014-09-17  457.334015  21056800.0\n",
+       "1  2014-09-18  424.440002  34483200.0\n",
+       "2  2014-09-19  394.795990  37919700.0\n",
+       "3  2014-09-20  408.903992  36863600.0\n",
+       "4  2014-09-21  398.821014  26580100.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_price.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "largest BTC News Search: \n"
+      "largest BTC News Search: 100\n"
      ]
     }
    ],
    "source": [
-    "print(f\"largest BTC News Search: \")"
+    "print(f\"largest BTC News Search: {df_btc_search['BTC_NEWS_SEARCH'].max()}\")"
    ]
   },
   {
@@ -579,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
