Converting to Datetime object for easy visulization

--- a/Google Trends/main.ipynb
+++ b/Google Trends/main.ipynb
@@ -594,77 +594,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Challenge**: Are there any missing values in any of the dataframes? If so, which row/rows have missing values? How many missing values are there?\n"
+    "**Are there any missing values in any of the dataframes? If so, which row/rows have missing values? How many missing values are there?**:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values for Tesla?: \n",
-      "Missing values for U/E?: \n",
-      "Missing values for BTC Search?: \n"
+      "Missing values for Tesla?:0 \n",
+      "Missing values for U/E?: 0\n",
+      "Missing values for BTC Search?: 0\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Missing values for Tesla?: \")\n",
-    "print(f\"Missing values for U/E?: \")\n",
-    "print(f\"Missing values for BTC Search?: \")"
+    "print(f\"Missing values for Tesla?:{df_tesla.isna().sum().sum()} \")\n",
+    "print(f\"Missing values for U/E?: {df_unemployment.isna().sum().sum()}\")\n",
+    "print(f\"Missing values for BTC Search?: {df_btc_search.isna().sum().sum()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values for BTC price?: \n"
+      "Missing values for BTC price?: 2\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Missing values for BTC price?: \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of missing values: \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Number of missing values: \")"
+    "print(f\"Missing values for BTC price?: {df_btc_price.isna().sum().sum()}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Challenge**: Remove any missing values that you found.\n"
+    "**Remove any missing values that you found.**:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values for BTC price?: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_btc_price.dropna(inplace=True)\n",
+    "print(f\"Missing values for BTC price?: {df_btc_price.isna().sum().sum()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -677,29 +671,333 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Challenge**: Check the data type of the entries in the DataFrame MONTH or DATE columns. Convert any strings in to Datetime objects. Do this for all 4 DataFrames. Double check if your type conversion was successful.\n"
+    "**Check the data type of the entries in the DataFrame MONTH or DATE columns. Convert any strings in to Datetime objects. Do this for all 4 DataFrames. Double check if your type conversion was successful.**:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-10-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MONTH\n",
+       "0 2010-06-01\n",
+       "1 2010-07-01\n",
+       "2 2010-08-01\n",
+       "3 2010-09-01\n",
+       "4 2010-10-01"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tesla.MONTH = pd.to_datetime(df_tesla[\"MONTH\"])\n",
+    "df_tesla[[\"MONTH\"]].head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004-02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-05-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MONTH\n",
+       "0 2004-01-01\n",
+       "1 2004-02-01\n",
+       "2 2004-03-01\n",
+       "3 2004-04-01\n",
+       "4 2004-05-01"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unemployment.MONTH = pd.to_datetime(df_unemployment[\"MONTH\"])\n",
+    "df_unemployment[[\"MONTH\"]].head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MONTH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-11-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MONTH\n",
+       "0 2014-09-01\n",
+       "1 2014-10-01\n",
+       "2 2014-11-01\n",
+       "3 2014-12-01\n",
+       "4 2015-01-01"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_search.MONTH = pd.to_datetime(df_btc_search[\"MONTH\"])\n",
+    "df_btc_search[[\"MONTH\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-09-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-09-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-09-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-09-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2199</th>\n",
+       "      <td>2020-09-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2200</th>\n",
+       "      <td>2020-09-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2201</th>\n",
+       "      <td>2020-09-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2202</th>\n",
+       "      <td>2020-09-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2203</th>\n",
+       "      <td>2020-09-28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2203 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           DATE\n",
+       "0    2014-09-17\n",
+       "1    2014-09-18\n",
+       "2    2014-09-19\n",
+       "3    2014-09-20\n",
+       "4    2014-09-21\n",
+       "...         ...\n",
+       "2199 2020-09-24\n",
+       "2200 2020-09-25\n",
+       "2201 2020-09-26\n",
+       "2202 2020-09-27\n",
+       "2203 2020-09-28\n",
+       "\n",
+       "[2203 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_btc_price.DATE = pd.to_datetime(df_btc_price[\"DATE\"])\n",
+    "df_btc_price[[\"DATE\"]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -729,31 +1027,6 @@
    "metadata": {},
    "source": [
     "# Data Visualisation\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Notebook Formatting & Style Helpers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create locators for ticks on the time axis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Register date converters to avoid warning messages"
    ]
   },
   {
