Adding the final README.MD AND modifying the directory

--- a/Google Trends/main.ipynb
+++ b/Google Trends/main.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tesla = pd.read_csv(\"TESLA Search Trend vs Price.csv\")\n",
+    "df_tesla = pd.read_csv(\"data/TESLA Search Trend vs Price.csv\")\n",
     "\n",
-    "df_btc_search = pd.read_csv(\"Bitcoin Search Trend.csv\")\n",
-    "df_btc_price = pd.read_csv(\"Daily Bitcoin Price.csv\")\n",
+    "df_btc_search = pd.read_csv(\"data/Bitcoin Search Trend.csv\")\n",
+    "df_btc_price = pd.read_csv(\"data/Daily Bitcoin Price.csv\")\n",
     "\n",
-    "df_unemployment = pd.read_csv(\"UE Benefits Search vs UE Rate 2004-19.csv\")"
+    "df_unemployment = pd.read_csv(\"data/UE Benefits Search vs UE Rate 2004-19.csv\")"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "(124, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "(73, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "(181, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "(73, 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "max          31.000000      498.320007"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "4  2004-05                      23     5.6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "4  2015-01                5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4  2014-09-21  398.821014  26580100.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "4 2010-10-01"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "4 2004-05-01"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        "4 2015-01-01"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "4 2014-09-21"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,16 +977,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MULTITECH\\AppData\\Local\\Temp\\ipykernel_15224\\2824475887.py:1: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "  df_btc_monthly = df_btc_price.resample(\"M\", on=\"DATE\").last()\n"
+     ]
+    }
+   ],
    "source": [
     "df_btc_monthly = df_btc_price.resample(\"M\", on=\"DATE\").last()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1068,7 @@
        "2015-01-31  217.464005  23348200.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1252,7 @@
        "4 2015-01-01                5"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1496,7 @@
        "4 2004-05-01                      23     5.6"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1574,7 @@
        "4                     NaN     NaN"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1739,19 +1748,19 @@
        "4  2004-05                       6     5.6"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_UE_benefits_2020 = pd.read_csv(\"UE Benefits Search vs UE Rate 2004-20.csv\")\n",
+    "df_UE_benefits_2020 = pd.read_csv(\"data/UE Benefits Search vs UE Rate 2004-20.csv\")\n",
     "df_UE_benefits_2020.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
